Se añade header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>remotoVSC</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Peluqueria juanito</h1>
+    </header>
 </body>
 </html>
